--- a/AUTHORS
+++ b/AUTHORS
@@ -2,8 +2,7 @@
 #
 # AUTHORS:
 #
-# Copyright (c) 2011 Citrix Systems Inc.,
-# All rights reserved.
+# Copyright (c) 2011 Citrix Systems Inc.
 #
 # $Id:$
 #
