--- a/INSTALL
+++ b/INSTALL
@@ -2,8 +2,7 @@
 #
 # INSTALL:
 #
-# Copyright (c) 2011 Citrix Systems Inc.,
-# All rights reserved.
+# Copyright (c) 2011 Citrix Systems Inc.
 #
 # $Id:$
 #
