--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,7 @@
 #
 # NEWS:
 #
-# Copyright (c) 2011 Citrix Systems Inc.,
-# All rights reserved.
+# Copyright (c) 2011 Citrix Systems Inc.
 #
 # $Id:$
 #
